# paq

./: .gitmodules  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: rust.yml
bundler/: Cargo.toml
bundler/fixtures/with-dep/: index.js
bundler/fixtures/with-modules/: package-lock.json  package.json
bundler/src/: lib.rs  prelude.js  queue.rs  writer.rs
comb/: Cargo.toml
comb/src/: lib.rs
parser/: Cargo.toml
parser/fixtures/: exports.js  itt_prelude.js  matrix.js
parser/src/: combinators.rs  lib.rs
queue/: Cargo.toml  README.md
queue/src/: lib.rs
resolve/: Cargo.toml  README.md
resolve/fixtures/browser-key-pkgjson-in-subdir/subdir/: package.json
resolve/fixtures/browser-sub-index/: package.json
resolve/fixtures/browser-sub-simple/: package.json
resolve/src/: lib.rs  utils.rs
src/: combinators.rs  lexer.rs  lib.rs  main.rs  parser.rs  pcomb.rs  prelude.js  queue.rs  resolve.rs
src/js/: combinators.rs  mod.rs  parser.rs
tests/: bundler_tests.rs  combinators_test.rs  combinators_tests.rs  lexer_tests.rs  parser_tests.rs  queue_tests.rs  resolve_tests.rs
tests/fixtures/lexer/deps-comments/: index.js
tests/fixtures/parser_deps/: deps-walker-all.js
tests/fixtures/resolve/browser-key-no-main-relative/: package.json
tests/fixtures/resolve/browser-key-relative/: package.json
tests/fixtures/resolve/pkginfo-nested/counter/: package.json
