[package]
name = "paq"
version = "0.1.0"
authors = ["Silvio Henrique Ferreira <shferreira@me.com>"]
edition = "2018"

description = "A javascript module bundler"
documentation = "https://docs.rs/js-bundler"
repository = "https://github.com/shff/paq"
license = "MIT"

keywords = ["js", "javascript", "bundler"]
exclude = [ "fixtures/*" ]

[profile.release]
lto = true
panic = 'abort'
codegen-units = 1

[dependencies]
regex = "1"
json = "0.12"
