[package]
name = "js-bundler"
version = "0.1.0"
authors = ["Silvio Henrique Ferreira <shferreira@me.com>"]
edition = "2018"

description = "A javascript module bundler"
documentation = "https://docs.rs/js-bundler"
repository = "https://github.com/shff/paq"
license = "MIT"

keywords = ["js", "javascript", "bundler"]
exclude = [ "fixtures/*" ]

[dependencies]
js-resolve = { version = "0.1.0", path = "../resolve" }
