[package]
name = "miniqueue"
version = "0.1.0"
authors = ["Silvio Henrique Ferreira <shferreira@me.com>"]
edition = "2018"

description = "A minimalistic single-thread job queue based on fold/reduce"
documentation = "https://docs.rs/miniqueue"
repository = "https://github.com/shff/paq"
license = "MIT"

keywords = ["queue"]

[dependencies]
