[package]
name = "js-resolve"
version = "0.1.0"
authors = ["Silvio Henrique Ferreira <shferreira@me.com>"]
edition = "2018"

description = "A node.js module resolver"
documentation = "https://docs.rs/js-resolve"
repository = "https://github.com/shff/paq"
license = "MIT"

keywords = ["js", "node", "modules"]
exclude = [ "fixtures/*" ]

[dependencies]
json = "0.12.0"
